--- a/client/app/common/scss/_ie.scss
+++ b/client/app/common/scss/_ie.scss
@@ -37,8 +37,16 @@
     height: calc(100% - 6rem);
   }
 
-  .locked-page {
+  .locked-page,
+  .error-page,
+  .pageNotFound {
     height: calc(100vh - #{$height-footer-nav-banner} - #{$height-company-banner});
   }
 
+  .navigation,
+  footer,
+  .banner {
+    margin-left: -8.6875rem;
+    margin-right: -8.6875rem;
+  }
 }
